@@ -1,3 +1,7 @@
+2001-08-13  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* ogr/ogrspatialreference.cpp: improved IsSame() test.
+
 2001-07-18  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* aclocal.m4: modified to identify -all for IRIX. 
